[tool.poetry]
name = "llamedl"
version = "0.1.0"
description = ""
authors = ["Jaroslaw Piszczala <(none)>"]

[tool.poetry.dependencies]
python = "^3.6"
musicbrainzngs = "^0.7.1"
mutagen = "^1.44"
youtube-dl = "^2020.3"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
flake8 = "^3.7"
isort = "^4.3.21"
pytest-mock = "^2.0.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
